Trying to fix photo and para align

--- a/css/app.css
+++ b/css/app.css
@@ -57,7 +57,7 @@
       max-width: 420px;
       border-radius: 16px;
       border: 4px solid #fff;
-      margin: 50px 50px;
+      margin: 100px 100px;
     }
   #skills {
     width: 100%;
